Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 11, 2023


If all humans are killed and the player ship dies, 
the mission ends but the game transitions to the 
game over screen, instead of restarting the mission 
(which is pointless to play since it's just enemies 
without any humans to defend. Even if the next 
mission is a dogfight, the mission after that 
will be empty of humans).

Shield strength updates use CMessageMediator class, 
and shield readout changes color from blue to red 
as shields weaken.

Smartbomb count moved from game match to player ship.

Smartbomb count updates use CMessageMediator class.

Human count updates use new CMessageMediator template class
to improve loose coupling.

Finished the new "Humans" readout on the stats panel, 
which shows safe humans as green squares, abducted humans 
as red squares. The number of squares decreases as 
humans are killed.

Arena bog down slowest time factor increased from 0.5 to 0.67; 
things got a little too slow when using smart bombs to clear dense areas.

Current mission and god mode moved from game instance to game match.

Player ship, humans, smartbomb count, and score (XP) 
moved from CDefconGameInstance to new Defcon::CGameMatch class.
Those items only exist during a match and weren't supposed 
to be part of CDefconGameInstance which represents 
the entire game application.

Arena bog down preference supported more smoothly and 
only by checking debris count. Easy way to test is 
to detonate a smartbomb amid a dense group of enemies.

Attempting to detonate a smart bomb when none are 
available produces a message and plays the invalid selection sound.

Pressing Tab in the game over screen skips ahead to 
introducing the stats, to finish introducing them, 
and then to return to the main menu.

Added flashing alert widget to status panel which 
appears when a human is being abducted.
